# videobox

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  api.py  app.py  build.sh  cache.py  configuration.py  debug.py  debugger.py  main.py  makefile  model.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  setup-app.py  setup.py  sign.sh  sources.json  sync.py  torrenter.py  torrenter2.py  utilities.py  videobox.ini
assets/: app.js  app.scss  balloon.css  button.scss  card.scss  carousel.js  carousel.scss  details.scss  helpers.scss  normalize.css  select.scss  skeleton.scss
macos/: app.py  setup.py
migrations/: 001_init.py  002_background-sync.py
src/: api.py  cache.py  colors.py  configuration.py  controllers.py  main.py  model.py  sync.py  torrenter.py  torrenter2.py  ui.kv  utilities.py  videobox.kv  views.py
src/kv/: library.kv  videobox.kv
src/views/: autowrap.py  downloads.py  episode.py  home.py  labelbutton.py  nav.py  series.py  sidebar.py  theme.py
tests/: conftest.py  test_dlna.py  test_frontend.py  test_iso639.py  test_sync.py
tests/sync/: episodes.json  releases.json  series-tags.json  series.json  tags.json  updated.json
videobox/: __init__.py  __main__.py  api.py  app.py  bt.py  colors.py  dlna.py  filters.py  iso639.py  languages.py  main.py  media.py  model.py  models.py  scraper.py  ssdp.py  ssdp2.py  sync.py  torrenter.py  utilities.py  views.py
videobox/dlna/: __init__.py  queries.py  routes.py
videobox/kv/: library.kv  ui.kv  videobox.kv
videobox/main/: __init__.py  announcer.py  queries.py  routes.py
videobox/static/: app.css  app.js  app.webmanifest
videobox/templates/: 404.html  _chart.html  _download-button.html  _download-progress.html  _download-settings.html  _download-status.html  _download_settings.html  _downloads.html  _episodes-grid.html  _episodes-list.html  _episodes.html  _follow-button.html  _followed.html  _following.html  _icons.html  _language-card-grid.html  _meta.html  _release_detail.html  _settings.html  _suggest.html  _tag-card-grid.html  _update-dialog-done.html  _update-dialog.html  _update-done.html  _update-progress.html  base.html  downloads.html  first-import.html  followed.html  following.html  home.html  language_detail.html  log.html  macros.html  search_results.html  series_detail.html  status.html  tag_detail.html  tags.html
videobox/templates/dlna/: browse-folder.xml  browse-series.xml  browse_error.xml  desc.xml  description.xml  scpd.xml  scpd2.xml
views/: downloads.py  episode.py  gallery.py  home.py  nav.py  series.py  theme.py
