[project]
name = "videobox"
dynamic = ["version"]
authors = [
  { name="Andrea Peltrin" },
]
description = "Easy TV series download"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "peewee >= 3.15.4,<4",
  "urllib3<2",
  "requests >= 2.31.0,<3",
  "flask >= 2.3.3,<3",
  "waitress >= 2.1.2,<3",
  "tomli >= 2.0.1,<3",
  "tomli-w >= 1.0.0,<2",
  "chardet == 5.2.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Flask",
]
[project.scripts]
videobox = "videobox:serve"

[project.urls]
"Homepage" = "https://github.com/passiomatic/videobox"
"Bug Tracker" = "https://github.com/passiomatic/videobox/issues"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["videobox", "videobox.main"]

[tool.setuptools.package-data]
videobox = ["trackers.txt", "static/*.*", "templates/*.*"]

[tool.setuptools.dynamic]
version = {attr = "videobox.__version__"}

[tools.py2app.bundle.main]
build-type = "standalone"
arch = "universal2"